fix some bug from dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,6 @@
       background-position: center;
     }
   }
+.darkBody {
+    background-color: #000;
+}
